--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.3) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 20 Mar 2013 21:49:04 -0400
+
 menulibre (13.03.2ubuntu1) UNRELEASED; urgency=low
 
   * Fix typo with new api
