--- a/po/es.po
+++ b/po/es.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-11-26 05:20-0500\n"
-"PO-Revision-Date: 2012-10-25 12:42+0000\n"
+"POT-Creation-Date: 2013-03-20 21:34-0400\n"
+"PO-Revision-Date: 2013-03-21 02:09+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-20 23:04+0000\n"
+"X-Launchpad-Export-Date: 2013-03-22 01:52+0000\n"
 "X-Generator: Launchpad (build 16532)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
@@ -89,7 +89,7 @@ msgstr "Ay_uda"
 msgid "_Contents"
 msgstr "Índ_ice"
 
-#: ../data/ui/MenulibreWindow.ui.h:19
+#: ../data/ui/MenulibreWindow.ui.h:19 ../menulibre/MenulibreWindow.py:1393
 msgid "Add Launcher"
 msgstr "Añadir lanzador"
 
@@ -134,179 +134,280 @@ msgid "Application"
 msgstr "Aplicación"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
+msgid "Categories"
+msgstr "Categorías"
+
+#: ../data/ui/MenulibreWindow.ui.h:31
+msgid "Applications"
+msgstr "Aplicaciones"
+
+#: ../data/ui/MenulibreWindow.ui.h:32
 msgid "<b>No applications found.</b>"
 msgstr "<b>No se encontraron aplicaciones.</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:31
+#: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Try searching everything."
 msgstr "Intente buscar en todo."
 
-#: ../data/ui/MenulibreWindow.ui.h:32
+#: ../data/ui/MenulibreWindow.ui.h:34
+msgid "Search Failed"
+msgstr "La búsqueda falló"
+
+#: ../data/ui/MenulibreWindow.ui.h:35
 msgid "<big><b>Application Name</b></big>"
 msgstr "<big><b>Nombre de la aplicación</b></big>"
 
-#: ../data/ui/MenulibreWindow.ui.h:33
+#: ../data/ui/MenulibreWindow.ui.h:36
 msgid "<i>A quick snippet about your application.</i>"
 msgstr "<i>Un resumen rápido de su aplicación.</i>"
 
-#: ../data/ui/MenulibreWindow.ui.h:34
+#: ../data/ui/MenulibreWindow.ui.h:37 ../menulibre/MenulibreWindow.py:226
 msgid "Command"
 msgstr "Orden"
 
-#: ../data/ui/MenulibreWindow.ui.h:35
+#: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Working Directory"
 msgstr "Directorio de trabajo"
 
-#: ../data/ui/MenulibreWindow.ui.h:36
+#: ../data/ui/MenulibreWindow.ui.h:39
 msgid "<b>Application Settings</b>"
 msgstr "<b>Configuración de la aplicación</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:37
+#: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Run in terminal"
 msgstr "Ejecutar en un terminal"
 
-#: ../data/ui/MenulibreWindow.ui.h:38
+#: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
 msgstr "Usar notificación de inicio"
 
-#: ../data/ui/MenulibreWindow.ui.h:39
+#: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Hide from menus"
 msgstr "Ocultar de los menús"
 
-#: ../data/ui/MenulibreWindow.ui.h:40
+#: ../data/ui/MenulibreWindow.ui.h:43
 msgid "<b>Options</b>"
 msgstr "<b>Opciones</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:41
+#: ../data/ui/MenulibreWindow.ui.h:44
 msgid "label"
 msgstr "etiqueta"
 
-#: ../data/ui/MenulibreWindow.ui.h:42
+#: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Delete this launcher..."
 msgstr "Eliminar este lanzador…"
 
-#: ../data/ui/MenulibreWindow.ui.h:43
+#: ../data/ui/MenulibreWindow.ui.h:46
 msgid "<small>Filename</small>"
 msgstr "<small>Nombre de archivo</small>"
 
-#: ../data/ui/MenulibreWindow.ui.h:44
+#: ../data/ui/MenulibreWindow.ui.h:47 ../menulibre/MenulibreWindow.py:68
 msgid "Accessories"
 msgstr "Accesorios"
 
-#: ../data/ui/MenulibreWindow.ui.h:45
+#: ../data/ui/MenulibreWindow.ui.h:48 ../menulibre/MenulibreWindow.py:59
 msgid "Development"
 msgstr "Desarrollo"
 
-#: ../data/ui/MenulibreWindow.ui.h:46
+#: ../data/ui/MenulibreWindow.ui.h:49 ../menulibre/MenulibreWindow.py:60
 msgid "Education"
 msgstr "Educación"
 
-#: ../data/ui/MenulibreWindow.ui.h:47
+#: ../data/ui/MenulibreWindow.ui.h:50 ../menulibre/MenulibreWindow.py:61
 msgid "Games"
 msgstr "Juegos"
 
-#: ../data/ui/MenulibreWindow.ui.h:48
+#: ../data/ui/MenulibreWindow.ui.h:51 ../menulibre/MenulibreWindow.py:62
 msgid "Graphics"
 msgstr "Gráficos"
 
-#: ../data/ui/MenulibreWindow.ui.h:49
+#: ../data/ui/MenulibreWindow.ui.h:52 ../menulibre/MenulibreWindow.py:63
 msgid "Internet"
 msgstr "Internet"
 
-#: ../data/ui/MenulibreWindow.ui.h:50
+#: ../data/ui/MenulibreWindow.ui.h:53 ../menulibre/MenulibreWindow.py:58
 msgid "Multimedia"
 msgstr "Multimedia"
 
-#: ../data/ui/MenulibreWindow.ui.h:51
+#: ../data/ui/MenulibreWindow.ui.h:54 ../menulibre/MenulibreWindow.py:64
 msgid "Office"
 msgstr "Oficina"
 
-#: ../data/ui/MenulibreWindow.ui.h:52
+#: ../data/ui/MenulibreWindow.ui.h:55 ../menulibre/MenulibreWindow.py:66
 msgid "Settings"
 msgstr "Configuración"
 
-#: ../data/ui/MenulibreWindow.ui.h:53
+#: ../data/ui/MenulibreWindow.ui.h:56 ../menulibre/MenulibreWindow.py:67
 msgid "System"
 msgstr "Sistema"
 
-#: ../data/ui/MenulibreWindow.ui.h:54
+#: ../data/ui/MenulibreWindow.ui.h:57 ../menulibre/MenulibreWindow.py:69
 msgid "WINE"
 msgstr "WINE"
 
-#: ../data/ui/MenulibreWindow.ui.h:55
+#: ../data/ui/MenulibreWindow.ui.h:58
 msgid "<b>Categories</b>"
 msgstr "<b>Categorías</b>"
 
-#: ../data/ui/MenulibreWindow.ui.h:56
+#: ../data/ui/MenulibreWindow.ui.h:59
 msgid "General Settings"
 msgstr "Configuración general"
 
-#: ../data/ui/MenulibreWindow.ui.h:57
+#: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Quicklists"
 msgstr "Listas rápidas"
 
-#: ../data/ui/MenulibreWindow.ui.h:58
+#: ../data/ui/MenulibreWindow.ui.h:61
 msgid "Editor"
 msgstr "Editor"
 
-#: ../data/ui/MenulibreWindow.ui.h:59
+#: ../data/ui/MenulibreWindow.ui.h:62
+msgid "Application Settings"
+msgstr "Configuración de la aplicación"
+
+#: ../data/ui/MenulibreWindow.ui.h:63
 msgid "<big><b>Remove Launcher?</b></big>"
 msgstr "<big><b>¿Eliminar el lanzador?</b></big>"
 
-#: ../data/ui/MenulibreWindow.ui.h:60
+#: ../data/ui/MenulibreWindow.ui.h:64
 msgid ""
 "Are you sure you wish to remove this launcher?  This cannot be undone."
 msgstr ""
 "¿Está seguro de que quiere eliminar este lanzador?  Esto no se puede "
 "deshacer."
 
-#: ../menulibre/MenulibreWindow.py:193
+#: ../menulibre/MenulibreWindow.py:65
+msgid "Other"
+msgstr "Otros"
+
+#: ../menulibre/MenulibreWindow.py:207
 msgid "Show"
 msgstr "Mostrar"
 
-#: ../menulibre/MenulibreWindow.py:246
+#: ../menulibre/MenulibreWindow.py:210
+msgid "Shortcut Name"
+msgstr "Nombre del atajo"
+
+#: ../menulibre/MenulibreWindow.py:218
+msgid "Displayed Name"
+msgstr "Nombre mostrado"
+
+#: ../menulibre/MenulibreWindow.py:260
 msgid "Image"
 msgstr "Imagen"
 
-#: ../menulibre/MenulibreWindow.py:248
+#: ../menulibre/MenulibreWindow.py:262
 msgid "Name"
 msgstr "Nombre"
 
+#: ../menulibre/MenulibreWindow.py:467 ../menulibre/MenulibreWindow.py:490
+msgid "Search Applications"
+msgstr "Buscar en aplicaciones"
+
+#: ../menulibre/MenulibreWindow.py:479
+#, python-format
+msgid "Search %s"
+msgstr "Buscar en %s"
+
+#: ../menulibre/MenulibreWindow.py:497
+#, python-format
+msgid ""
+"Are you sure you wish to remove \"%s\"?\n"
+"This cannot be undone."
+msgstr ""
+"¿Está seguro de que quiere eliminar \"%s\"?\n"
+"Esto no se puede deshacer."
+
+#: ../menulibre/MenulibreWindow.py:506
+#, python-format
+msgid ""
+"Are you sure you wish to remove \"%s\"?\n"
+"The menu item will be restored to system defaults."
+msgstr ""
+"¿Está seguro de que quiere eliminar \"%s\"?\n"
+"Se volvió al lanzador sistema."
+
+#: ../menulibre/MenulibreWindow.py:515 ../menulibre/MenulibreWindow.py:1204
+#: ../menulibre/MenulibreWindow.py:1319 ../menulibre/MenulibreWindow.py:1473
+#: ../menulibre/MenulibreWindow.py:1645 ../menulibre/MenulibreWindow.py:1647
+#: ../menulibre_lib/MenulibreXdg.py:44
+msgid "New Menu Item"
+msgstr "Nuevo item menu"
+
+#: ../menulibre/MenulibreWindow.py:706 ../menulibre/MenulibreWindow.py:727
+msgid "Select an executable"
+msgstr "Seleccione una aplicación"
+
+#: ../menulibre/MenulibreWindow.py:845
+msgid "NewShortcut"
+msgstr "AccesoRápidoNuevo"
+
+#: ../menulibre/MenulibreWindow.py:847
+msgid "New Shortcut"
+msgstr "Acceso rápido nuevo"
+
+#: ../menulibre/MenulibreWindow.py:1364 ../menulibre/MenulibreWindow.py:1456
+msgid "All Applications"
+msgstr "Todas las Aplicaciones"
+
+#: ../menulibre/MenulibreWindow.py:1393
+msgid "Add a new application launcher"
+msgstr "Añadir un lanzador de aplicación nuevo"
+
+#: ../menulibre/MenulibreWindow.py:1687
+msgid "Search Results"
+msgstr "Resultados de la búsqueda"
+
 #: ../data/ui/AboutMenulibreDialog.ui.h:1
-msgid "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
-msgstr "Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>"
+msgid "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
+msgstr "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
-"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# This program is free software: you can redistribute it and/or modify it \n"
-"# under the terms of the GNU General Public License version 3, as published "
+"Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"This program is free software: you can redistribute it and/or modify it \n"
+"under the terms of the GNU General Public License version 3, as published \n"
+"by the Free Software Foundation.\n"
 "\n"
-"# by the Free Software Foundation.\n"
-"# \n"
-"# This program is distributed in the hope that it will be useful, but \n"
-"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
-"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
-"# PURPOSE.  See the GNU General Public License for more details.\n"
-"# \n"
-"# You should have received a copy of the GNU General Public License along \n"
-"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
+"This program is distributed in the hope that it will be useful, but \n"
+"WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"PURPOSE.  See the GNU General Public License for more details.\n"
+"\n"
+"You should have received a copy of the GNU General Public License along \n"
+"with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"# Copyright (C) 2012 Sean Davis <smd.seandavis@gmail.com>\n"
-"# Este programa es software libre; puede redistribuirlo y/o modificarlo \n"
-"# bajo los términos de la Licencia Pública General de GNU versión 3, como la "
+"Copyright © 2012–2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"Este programa es software libre: puede redistribuirlo y/o modificarlo \n"
+"bajo los términos de la Licencia Pública General de GNU versión 3, como \n"
+"la publica la Free Software Foundation.\n"
 "\n"
-"# publica la Free Software Foundation.\n"
-"# \n"
-"# Este programa se distribuye con la esperanza de que será útil, pero \n"
-"# SIN NINGUNA GARANTÍA; ni siquiera con las garantías implícitas de \n"
-"# COMERCIABILIDAD, CALIDAD SATISFACTORIA, o ADECUACIÓN A UN \n"
-"# PROPÓSITO PARTICULAR. Vea la Licencia Pública General de GNU para más "
+"Este programa se distribuye con la esperanza de que será útil, pero \n"
+"SIN NINGUNA GARANTÍA; sin siquiera las garantías implícitas de\n"
+"COMERCIABILIDAD, CALIDAD SATISFACTORIA o IDONEIDAD PARA UN \n"
+"PROPÓSITO PARTICULAR.  Vea la Licencia Pública General de GNU para más "
 "detalles.\n"
-"# \n"
-"# Debería haber recibido una copia de la Licencia Pública General de GNU "
-"junto \n"
-"# con este programa. Si no, consulte <http://www.gnu.org/licenses/>.\n"
+"\n"
+"Debería haber recibido una copia de la Licencia General Pública de GNU con \n"
+"este programa.  Si no, consulte <http://www.gnu.org/licenses/>.\n"
+
+#: ../menulibre_lib/MenulibreXdg.py:45
+msgid "A small descriptive blurb about this application."
+msgstr "Una pequeña propaganda descriptiva sobre esta aplicación."
+
+#: ../menulibre_lib/MenulibreXdg.py:160
+#, python-format
+msgid "'%s' is not a .desktop file"
+msgstr "«%s» no es un archivo .desktop"
+
+#: ../menulibre_lib/MenulibreXdg.py:163
+msgid "Initialized without required parameters."
+msgstr "Se inició sin los parámetros requeridos."
+
+#: ../menulibre_lib/MenulibreXdg.py:172
+#, python-format
+msgid "'%s' is not a .directory file"
+msgstr "«%s» no es un archivo .directory"
 
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages (-vv debugs menulibre_lib also)"
