--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.8) quantal; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 24 Mar 2013 10:04:51 -0400
+
 menulibre (13.03.7) precise; urgency=low
 
   * New release.
