--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.12) raring; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Mon, 25 Mar 2013 18:30:37 -0400
+
 menulibre (13.03.11) quantal; urgency=low
 
   * New release.
