--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+menulibre (13.03.13ubuntu1) UNRELEASED; urgency=low
+
+  * Fix UnicodeDecodeErrors, make quicklists translatable
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 26 Mar 2013 22:30:06 -0400
+
+menulibre (13.03.13) precise; urgency=low
+
+  * Update translation template.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 26 Mar 2013 22:30:06 -0400
+
 menulibre (13.03.12) raring; urgency=low
 
   * New release.
