--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+menulibre (13.03.14) precise; urgency=low
+
+  * New release.
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 26 Mar 2013 22:30:42 -0400
+
 menulibre (13.03.13ubuntu1) UNRELEASED; urgency=low
 
   * Fix UnicodeDecodeErrors, make quicklists translatable
