--- a/po/es.po
+++ b/po/es.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-03-20 21:34-0400\n"
-"PO-Revision-Date: 2013-03-21 02:09+0000\n"
-"Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
+"POT-Creation-Date: 2013-03-26 22:28-0400\n"
+"PO-Revision-Date: 2013-03-25 22:33+0000\n"
+"Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-22 01:52+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-27 05:25+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Select an Icon"
@@ -364,47 +364,49 @@ msgstr "Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>"
 
 #: ../data/ui/AboutMenulibreDialog.ui.h:2
 msgid ""
-"Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
-"This program is free software: you can redistribute it and/or modify it \n"
-"under the terms of the GNU General Public License version 3, as published \n"
-"by the Free Software Foundation.\n"
+"# Copyright (C) 2012-2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"# This program is free software: you can redistribute it and/or modify it \n"
+"# under the terms of the GNU General Public License version 3, as published "
 "\n"
-"This program is distributed in the hope that it will be useful, but \n"
-"WITHOUT ANY WARRANTY; without even the implied warranties of \n"
-"MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
-"PURPOSE.  See the GNU General Public License for more details.\n"
-"\n"
-"You should have received a copy of the GNU General Public License along \n"
-"with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
+"# by the Free Software Foundation.\n"
+"# \n"
+"# This program is distributed in the hope that it will be useful, but \n"
+"# WITHOUT ANY WARRANTY; without even the implied warranties of \n"
+"# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR \n"
+"# PURPOSE.  See the GNU General Public License for more details.\n"
+"# \n"
+"# You should have received a copy of the GNU General Public License along \n"
+"# with this program.  If not, see <http://www.gnu.org/licenses/>.\n"
 msgstr ""
-"Copyright © 2012–2013 Sean Davis <smd.seandavis@gmail.com>\n"
-"Este programa es software libre: puede redistribuirlo y/o modificarlo \n"
-"bajo los términos de la Licencia Pública General de GNU versión 3, como \n"
-"la publica la Free Software Foundation.\n"
+"# Copyright © 2012–2013 Sean Davis <smd.seandavis@gmail.com>\n"
+"# Este programa es software libre: puede redistribuirlo y/o modificarlo\n"
+"# bajo los términos de la Licencia Pública General de GNU versión 3, como\n"
+"# la publica la Free Software Foundation.\n"
 "\n"
-"Este programa se distribuye con la esperanza de que será útil, pero \n"
-"SIN NINGUNA GARANTÍA; sin siquiera las garantías implícitas de\n"
-"COMERCIABILIDAD, CALIDAD SATISFACTORIA o IDONEIDAD PARA UN \n"
-"PROPÓSITO PARTICULAR.  Vea la Licencia Pública General de GNU para más "
-"detalles.\n"
+"# Este programa se distribuye con la esperanza de que será útil, pero\n"
+"# SIN NINGUNA GARANTÍA; sin siquiera las garantías implícitas de\n"
+"# COMERCIABILIDAD, CALIDAD SATISFACTORIA o IDONEIDAD PARA UN\n"
+"# PROPÓSITO PARTICULAR.  Vea la Licencia Pública General de GNU para más\n"
+"# detalles.\n"
 "\n"
-"Debería haber recibido una copia de la Licencia General Pública de GNU con \n"
-"este programa.  Si no, consulte <http://www.gnu.org/licenses/>.\n"
+"# Debería haber recibido una copia de la Licencia General Pública de GNU "
+"con\n"
+"# este programa.  Si no, consulte <http://www.gnu.org/licenses/>.\n"
 
 #: ../menulibre_lib/MenulibreXdg.py:45
 msgid "A small descriptive blurb about this application."
 msgstr "Una pequeña propaganda descriptiva sobre esta aplicación."
 
-#: ../menulibre_lib/MenulibreXdg.py:160
+#: ../menulibre_lib/MenulibreXdg.py:171
 #, python-format
 msgid "'%s' is not a .desktop file"
 msgstr "«%s» no es un archivo .desktop"
 
-#: ../menulibre_lib/MenulibreXdg.py:163
+#: ../menulibre_lib/MenulibreXdg.py:174
 msgid "Initialized without required parameters."
 msgstr "Se inició sin los parámetros requeridos."
 
-#: ../menulibre_lib/MenulibreXdg.py:172
+#: ../menulibre_lib/MenulibreXdg.py:183
 #, python-format
 msgid "'%s' is not a .directory file"
 msgstr "«%s» no es un archivo .directory"
@@ -420,3 +422,11 @@ msgstr "Editor de menús"
 #: ../menulibre.desktop.in.h:2
 msgid "Edit System and User Menus with ease"
 msgstr "Edite los menús del sistema y del usuario con facilidad"
+
+#: ../menulibre.desktop.in.h:3
+msgid "Edit user menus"
+msgstr ""
+
+#: ../menulibre.desktop.in.h:4
+msgid "Edit system menus"
+msgstr ""
