--- a/po/ca.po
+++ b/po/ca.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2013-05-05 06:08+0000\n"
+"PO-Revision-Date: 2014-07-15 00:07+0000\n"
 "Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-15 06:07+0000\n"
-"X-Generator: Launchpad (build 17007)\n"
+"X-Launchpad-Export-Date: 2014-07-15 05:54+0000\n"
+"X-Generator: Launchpad (build 17111)\n"
 "Language: ca\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -36,11 +36,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Afegeix un _separador"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
-msgstr ""
+msgstr "Selecció d’icones"
 
 #: ../data/ui/MenulibreWindow.ui.h:5 ../menulibre/MenulibreApplication.py:1042
 #: ../menulibre/MenulibreApplication.py:1166
@@ -49,11 +49,11 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:2678
 #: ../menulibre/MenulibreApplication.py:2784
 msgid "Cancel"
-msgstr ""
+msgstr "Cancel·la"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Apply"
-msgstr ""
+msgstr "Aplica"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
@@ -65,7 +65,7 @@ msgstr "Fitxer d’imatge"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
-msgstr ""
+msgstr "<b>Trieu una imatge</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
