--- a/po/hr.po
+++ b/po/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-26 20:33-0400\n"
-"PO-Revision-Date: 2016-02-16 17:46+0000\n"
+"PO-Revision-Date: 2016-03-21 23:30+0000\n"
 "Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-02-17 05:44+0000\n"
-"X-Generator: Launchpad (build 17925)\n"
+"X-Launchpad-Export-Date: 2016-03-22 06:01+0000\n"
+"X-Generator: Launchpad (build 17958)\n"
 "Language: hr\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -189,7 +189,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Application Comment"
-msgstr ""
+msgstr "Komentar programa"
 
 #: ../data/ui/MenulibreWindow.ui.h:39 ../menulibre/MenulibreApplication.py:682
 msgid "Description"
