--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-07-13 13:19+0000\n"
+"PO-Revision-Date: 2017-08-10 13:30+0000\n"
 "Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-07-14 05:36+0000\n"
-"X-Generator: Launchpad (build 18419)\n"
+"X-Launchpad-Export-Date: 2017-08-11 05:35+0000\n"
+"X-Generator: Launchpad (build 18446)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -811,7 +811,7 @@ msgstr ""
 #: ../menulibre/util.py:496
 #, python-format
 msgid "%s: Exec key not found"
-msgstr ""
+msgstr "%s: ausführender Schlüssel nicht gefunden"
 
 #: ../menulibre/util.py:502
 msgid ""
@@ -822,7 +822,7 @@ msgstr ""
 #: ../menulibre/util.py:507
 #, python-format
 msgid "%s: Exec program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s: ausführendes Programm »%s« wurde nicht im PFAD gefunden"
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
