--- a/po/pl.po
+++ b/po/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2014-05-20 10:28+0000\n"
+"PO-Revision-Date: 2017-08-22 12:21+0000\n"
 "Last-Translator: Piotr Strębski <strebski@gmail.com>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-08-23 05:30+0000\n"
+"X-Generator: Launchpad (build 18446)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -157,7 +157,7 @@ msgstr "Aktywowany przez D-Bus"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Invalid desktop files detected! Please see details"
-msgstr ""
+msgstr "Wykryto nieprawidłowe pliki .desktop! Prosimy zobaczyć szczegóły"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
@@ -349,7 +349,7 @@ msgstr "kolumna"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr ""
+msgstr "Dziennik - Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
@@ -750,7 +750,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1901
 msgid "Check for bad desktop files"
-msgstr ""
+msgstr "Sprawdź czy istnieją błędne pliki .desktop"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
@@ -819,7 +819,7 @@ msgstr ""
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: Plik .desktop jest prawidłowy??"
 
 #~ msgid "Image File"
 #~ msgstr "Plik obrazu"
